--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
         padding: 0;
         height: 100%;
         font-family: sans-serif;
-        background-color: #f4f4f4;
+        background-color: #5E584F;
       }
     </style>
   </head>
