--- a/src/app.html
+++ b/src/app.html
@@ -12,8 +12,14 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        font-family: sans-serif;
+        font-family: serif;
         background-color: #5E584F;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
       }
     </style>
   </head>
